Fri Feb 14 12:02:12 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * utils/catior/Makefile.bor:
          Fixed this BCB makefile

Thu Feb 13 19:30:55 2003  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* tests/RTCORBA/Persistent_IOR/Makefile: Linked the client with
	  RTCORBA library.

Thu Feb 13 15:15:29 2003  Priyanka Gontla  <pgontla@ociweb.com>

	* tao/MCAST_Parser.cpp (multicast_query):
          Modified the diagnostic message that Craig added with the
	  changelog entry

	  Wed Feb 12 00:45:04 UTC 2003  Craig Rodrigues <crodrigu@bbn.com>

	  to reflect the actual service name instead of being NameService
	  always. Added a service_name check to print out the NameService
	  related debugging message if it is indeed NameService.

	* orbsvcs/ImplRepo_Service/tao_imr_i.cpp:
	* orbsvcs/ImplRepo_Service/ImR_Activator_i.cpp:
	  A change which I did a while ago seemed to be missing. Nanbor
	  applied the relevant fixes for Windows. Removing the ifdefs
	  around the same code so that even for non-windows, the whole
	  hostname including the domain is used.


Thu Feb 13 17:45:35 2003  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* utils/catior/Makefile: Do not build if RTCORBA is turned off.

Thu Feb 13 17:41:37 2003  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* tests/RTCORBA/Profile_And_Endpoint_Selection/svc.conf: Added the
	  scheduling policy to the configuration file.

Thu Feb 13 16:35:24 2003  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* tests/Exposed_Policies/svc.conf: Configuration file for
	  scheduling policy.

Thu Feb 13 13:32:50 2003  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* utils/catior/catior.dsp: Fixed the debug and release configurations.

Thu Feb 13 14:21:43 2003  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* utils/catior/catior.cpp: Fixed warnings and errors on various
	  platforms.
